Make FCM and API key unique, implement /user/api-key endpoint
