# api/models/user.go
@@ -11,8 +11,8 @@ import (
 type User struct {
 	gorm.Model
 	ID            uuid.UUID `json:"id" example:"uuid"`
-	APIKey        string    `json:"apiKey" example:"uuid"`
-	FCMKey        string    `json:"fcmKey" example:"fcm-token-example"`
+	APIKey        string    `json:"apiKey" example:"uuid" gorm:"uniqueIndex"`
+	FCMKey        string    `json:"fcmKey" example:"fcm-token-example" gorm:"uniqueIndex"`
 	UserCreated   time.Time `json:"userCreated" example:"2023-01-01T00:00:00Z"`
 	FCMKeyUpdated time.Time `json:"fcmKeyUpdated" example:"2023-01-01T00:00:00Z"`
 }
