# api/models/user_requests.go
@@ -7,7 +7,6 @@ type CreateUserRequest struct {
 type CreateUserResponse struct {
 	ID            string `json:"id" example:"00000000-0000-0000-0000-000000000000"`
 	APIKey        string `json:"apiKey" example:"00000000-0000-0000-0000-000000000000"`
-	FCMKey        string `json:"fcmKey" example:"fcm-token-example"`
 	UserCreated   string `json:"userCreated" example:"2025-01-01T00:00:00Z"`
 	FCMKeyUpdated string `json:"fcmKeyUpdated" example:"2025-01-01T00:00:00Z"`
 }
